<resources>
    <string name="app_name">MarronLucia2Eva</string>
    <string name="pass">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="email">Email</string>
    <string name="telefono">Teléfono</string>
    <string name="nuevo">NUEVO</string>
    <string name="modificar">MODIFICAR</string>
    <string name="borrar">BORRAR</string>
    <string name="listar">LISTAR</string>
</resources>