<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/SCBSwitch"
    tools:context=".Agenda">

    <Button
        android:id="@+id/modificar"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#E61FC535"
        android:fontFamily="@font/unbounded"
        android:text="@string/modificar"
        android:textColor="#000000"
        android:textSize="13dp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nuevo" />

    <Button
        android:id="@+id/nuevo"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#E61FC535"
        android:fontFamily="@font/unbounded"
        android:text="@string/nuevo"
        android:textColor="#000000"
        android:textSize="15dp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/borrar"
        app:layout_constraintEnd_toStartOf="@+id/modificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <Button
        android:id="@+id/borrar"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#E61FC535"
        android:fontFamily="@font/unbounded"
        android:text="@string/borrar"
        android:textColor="#000000"
        android:textSize="15dp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/listaNombres"
        app:layout_constraintEnd_toStartOf="@+id/listar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nuevo" />

    <Button
        android:id="@+id/listar"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#E61FC535"
        android:fontFamily="@font/unbounded"
        android:text="@string/listar"
        android:textColor="#000000"
        android:textSize="15dp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/listaNombres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/borrar" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="41dp"
        android:background="@drawable/shapedrawable"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gris"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="41dp"
        android:background="@drawable/shapedrawable"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPostalAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gris"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="41dp"
        android:background="@drawable/shapedrawable"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gris"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/shapedrawable"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gris"
        app:layout_constraintBottom_toTopOf="@+id/modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="39dp"
        android:fontFamily="@font/unbounded"
        android:text="AGENDA"
        android:textColor="#E61FC535"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listaNombres"
        android:layout_width="331dp"
        android:layout_height="145dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/listview2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borrar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="411dp"
        android:layout_marginBottom="703dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="39dp"
        android:backgroundTint="#E61FC535"
        android:contentDescription="Llamada"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_call" />

</androidx.constraintlayout.widget.ConstraintLayout>